--- a/app/src/main/res/layout/activity_choose_timer.xml
+++ b/app/src/main/res/layout/activity_choose_timer.xml
@@ -7,134 +7,140 @@
     android:layout_height="match_parent"
     tools:context=".ChooseTimer">
 
-    <TextView
-        android:id="@+id/bullet"
-        android:layout_width="60dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="52dp"
-        android:text="Bullet"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.535"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/blitz_min"
-        android:layout_width="130dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="300dp"
-        android:onClick="timer_start"
-        android:text="3 min"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.206"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/central_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
 
     <Button
         android:id="@+id/rapid_min_sec"
         android:layout_width="130dp"
         android:layout_height="70dp"
-        android:layout_marginTop="472dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="40dp"
         android:onClick="timer_start"
         android:text="10 min + 1s"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.832"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/no_timer"
-        android:layout_width="130dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="612dp"
-        android:onClick="no_timer_start"
-        android:text="No timer"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/blitz_min_sec"
-        android:layout_width="130dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="300dp"
-        android:onClick="timer_start"
-        android:text="3 min + 1s"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.832"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@id/rapid_min"
+        app:layout_constraintTop_toBottomOf="@id/rapid" />
 
     <Button
         android:id="@+id/rapid_min"
         android:layout_width="130dp"
         android:layout_height="70dp"
-        android:layout_marginTop="472dp"
+        android:layout_marginTop="40dp"
         android:onClick="timer_start"
         android:text="10 min"
         android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.206"
+        app:layout_constraintEnd_toStartOf="@id/rapid_min_sec"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/bullet_min_sec"
-        android:layout_width="130dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="132dp"
-        android:text="1 min + 1s"
-        android:textColor="@color/white"
-        android:onClick="timer_start"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.832"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/rapid"
-        android:layout_width="130dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="416dp"
-        android:text="Rapid"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.669"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/blitz"
-        android:layout_width="130dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="232dp"
-        android:text="Blitz"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.669"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/rapid" />
 
     <Button
         android:id="@+id/bullet_min"
         android:layout_width="130dp"
         android:layout_height="70dp"
-        android:layout_marginTop="124dp"
+        android:layout_marginTop="36dp"
         android:onClick="timer_start"
         android:text="1 min"
         android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.206"
+        app:layout_constraintEnd_toStartOf="@id/bullet_min_sec"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/bullet" />
+
+    <Button
+        android:id="@+id/blitz_min"
+        android:layout_width="130dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="40dp"
+        android:onClick="timer_start"
+        android:text="3 min"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toStartOf="@id/blitz_min_sec"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/blitz" />
+
+    <Button
+        android:id="@+id/no_timer"
+        android:layout_width="130dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="32dp"
+        android:onClick="no_timer_start"
+        android:text="No timer"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/central_guideline"
+        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintStart_toStartOf="@id/central_guideline"
+        app:layout_constraintTop_toBottomOf="@id/rapid_min_sec"
+        app:layout_constraintVertical_bias="0.147" />
+
+    <TextView
+        android:id="@+id/rapid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Rapid"
+        android:textColor="@color/white"
+        android:textSize="17dp"
+        app:layout_constraintEnd_toEndOf="@id/central_guideline"
+        app:layout_constraintHorizontal_bias="0.511"
+        app:layout_constraintStart_toStartOf="@id/central_guideline"
+        app:layout_constraintTop_toBottomOf="@id/blitz_min" />
+
+    <Button
+        android:id="@+id/blitz_min_sec"
+        android:layout_width="130dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="40dp"
+        android:onClick="timer_start"
+        android:text="3 min + 1s"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/blitz_min"
+        app:layout_constraintTop_toBottomOf="@id/blitz" />
+
+    <TextView
+        android:id="@+id/bullet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Bullet"
+        android:textColor="@color/white"
+        android:textSize="18dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/bullet_min"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"/>
+
+    <Button
+        android:id="@+id/bullet_min_sec"
+        android:layout_width="130dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="36dp"
+        android:onClick="timer_start"
+        android:text="1 min + 1s"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/bullet_min"
+        app:layout_constraintTop_toBottomOf="@id/bullet" />
+
+    <TextView
+        android:id="@+id/blitz"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Blitz"
+        android:textColor="@color/white"
+        android:textSize="17dp"
+        app:layout_constraintEnd_toEndOf="@id/central_guideline"
+        app:layout_constraintHorizontal_bias="0.515"
+        app:layout_constraintStart_toStartOf="@id/central_guideline"
+        app:layout_constraintTop_toBottomOf="@id/bullet_min" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
