--- a/app/src/main/res/layout/activity_openings.xml
+++ b/app/src/main/res/layout/activity_openings.xml
@@ -20,7 +20,7 @@
         android:gravity="center"
         android:text="Some well-known openings"
         android:textColor="@color/white"
-        android:textSize="18sp" />
+        android:textSize="18dp" />
 
     <Space
         android:layout_width="match_parent"
