--- a/app/src/main/res/layout/activity_choose_timer.xml
+++ b/app/src/main/res/layout/activity_choose_timer.xml
@@ -43,7 +43,7 @@
         android:id="@+id/bullet_min"
         android:layout_width="130dp"
         android:layout_height="70dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="40dp"
         android:onClick="timer_start"
         android:text="1 min"
         android:textColor="@color/white"
@@ -76,7 +76,7 @@
         app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="@id/central_guideline"
         app:layout_constraintTop_toBottomOf="@id/rapid_min_sec"
-        app:layout_constraintVertical_bias="0.147" />
+        app:layout_constraintVertical_bias="0.177" />
 
     <TextView
         android:id="@+id/rapid"
@@ -108,21 +108,22 @@
         android:id="@+id/bullet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:text="Bullet"
         android:textColor="@color/white"
         android:textSize="18dp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/bullet_min"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"/>
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/bullet_min_sec"
         android:layout_width="130dp"
         android:layout_height="70dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="40dp"
         android:onClick="timer_start"
         android:text="1 min + 1s"
         android:textColor="@color/white"
