Finished app with no add (is app still running needs fix)

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -11,28 +11,16 @@
         android:id="@+id/textView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Chess everywhere is a chess app, completely crafted by Nabil Abdelouahed. \n\nThe app allows you to enjoy a good game of chess with a friend without the need for an internet connection or an account. \n\nYou can also use the free mode to let loose of your imagination or simply recreate a position you want to think about. \n\nYou can also have a quick look at some brief information about a few openings.\n\nI hope you enjoy the app ! \n\nDon't hesitate to share your experience with a review or by reporting a bug. To do so, you can press the button bellow."
-        android:textColor="@color/white"
-        android:textSize="18dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/contact_us" />
-
-    <Button
-        android:id="@+id/contact_us"
-        android:layout_width="200dp"
-        android:layout_height="80dp"
-        android:text="Contact us"
+        android:text="Chess everywhere is a chess app, completely crafted by Nabil Abdelouahed. \n\nThe app allows you to enjoy a good game of chess with a friend without the need for an internet connection or an account. \n\nYou can also use the free mode to let loose of your imagination or simply recreate a position you want to think about. \n\nYou can also have a quick look at some brief information about a few openings.\n\nI hope you enjoy the app ! "
         android:textColor="@color/white"
         android:textSize="18dp"
-        android:onClick="contact_us"
-        app:layout_constraintTop_toBottomOf="@id/textView"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
